[package]
name = "fuzzer_runtime"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true

[dependencies]
libafl = { version = "0.15.3", features = ["prelude"] }
libafl_bolts = { version = "0.15.3", features = ["prelude"] }
nix = "0.29.0"
goblin = "0.10"
memmap2 = "0.9"
